# dataframe_half_auto_preprocess

./: .gitignore  DataProcessorRegister.py  README.md  config.py  example.py  main.py  pyproject.toml  sample.csv  sample.py  sample_1k.csv  test_async.py  test_async2.py  test_histogram.py  test_readme.py  utils.py
src/: config.py  example.py  load_json.py  pre_encoder.json
src/DataframeHalfAutoPreprocess/: ColumnMetaManager.py  DataProcessor.py  DataProcessorRegister.py  DataProcessorRegister_saved.py  __init__.py  a.json  helper.py  json_helper.py  utils.py
